--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.0", //Serkan Varışlı değişikliğin farkında... Teşekkür ederim.. Saygılar 
     "mysql2": "^3.2.4",
     "winston": "^3.8.2"
   }
