--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "express-rate-limit": "^6.7.0",
     "morgan": "^1.10.0", //Serkan Varışlı değişikliğin farkında... Teşekkür ederim.. Saygılar 
     "mysql2": "^3.2.4",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2" // 2 kısa winston light .. :)
   }
 }
