--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "morgan": "^1.10.0", //Serkan Varışlı değişikliğin farkında... Teşekkür ederim.. Saygılar 
+    "morgan": "^1.10.0", 
     "mysql2": "^3.2.4",
-    "winston": "^3.8.2" // 2 kısa winston light .. :)
+    "winston": "^3.8.2" 
   }
 }
