--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "morgan": "^1.10.0", 
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.4",
-    "winston": "^3.8.2" 
+    "winston": "^3.8.2"
   }
 }
